<?xml version="1.0" ?>
<package format="3">
  <name>ros_ads_msgs</name>
  <version>1.0.0</version>
  <description>Basic messages used to communicate with a ros_ads_node node and report it's state</description>

  <author email="alexis.fetet@capacites.fr">Alexis Fetet</author>
  <author email="elvin.corbel@etu.univ-nantes.fr">elvin</author>
  <maintainer email="julien.viaud@capacites.fr">Julien Viaud</maintainer>

 <license>BSD</license>

  <!--
  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>


</package>
